İş emri kapatma işlemi entegre oldu.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -373,8 +373,8 @@
                                     <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT STOK KODU</th>
                                     <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT STOK ADI</th>
                                     <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT GENISLIK</th>
-                                    <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true">IE MIKTAR2</th>
-                                    <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true">IE MIKTAR</th>
+                                    <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR2</th>
+                                    <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR</th>
                                     <th data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFISEMRINO</th>
                                     <th data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF_STOK_KODU</th>
                                     <th data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF_STOK_ADI</th>
@@ -517,30 +517,30 @@
         $('#BekleyenIsEmirleriTable').on('expand-row.bs.table', function (e, index, row, $detail) {
             $detail.html(`<div class="card-body p-2" style="background-color:mintcream;"><div class="table-responsive"><table id="BekleyenIsEmirleri${row.HAM_SERINO}DetailTable" class="table" data-search="false" data-show-refresh="false" data-show-toggle="false" data-show-fullscreen="false" data-show-columns="false" data-show-columns-toggle-all="false" data-detail-view="false" data-detail-view-by-click="false" data-show-export="false" data-click-to-select="true" data-minimum-count-columns="2" data-show-pagination-switch="false" data-pagination="false" data-id-field="id" data-show-footer="false" data-mobile-responsive="true" data-row-style="DetailSatirStili" data-response-handler="responseHandler" data-pagination-parts="['pageSize', 'pageInfo', 'pageList']" data-locale="tr-TR"><thead><tr>
             <th data-field="TARIH" data-halign="center" data-align="center" data-sortable="true">TARİH</th>
-                                        <th data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAM_SERINO</th>
-                                        <th data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM_STOK_KODU</th>
-                                        <th data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAM_ADI</th>
-                                        <th data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAM_DETAY</th>
-                                        <th data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAM_GENISLIK</th>
-                                        <th data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM_KALINLIK</th>
-                                        <th data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAM_FIRMA_SERI</th>
-                                        <th data-field="ACIKLAMA_4" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA_4</th>
-                                        <th data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA_5</th>
-                                        <th data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAM_KALITE</th>
-                                        <th data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM_KAP_KALINLIK</th>
-                                        <th data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAM_MIKTAR</th>
-                                        <th data-field="SIRA" data-halign="center" data-align="center" data-sortable="true">SIRA</th>
-                                        <th data-field="USTISEMRI" data-halign="center" data-align="center" data-sortable="true">USTISEMRI</th>
-                                        <th data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT_ISEMRI</th>
-                                        <th data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">URT_SERINO</th>
-                                        <th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT_STOK_KODU</th>
-                                        <th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT_STOK_ADI</th>
-                                        <th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT_GENISLIK</th>
-                                        <th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true">IE_MIKTAR2</th>
-                                        <th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true">IE_MIKTAR</th>
-                                        <th data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFISEMRINO</th>
-                                        <th data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF_STOK_KODU</th>
-                                        <th data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF_STOK_ADI</th>
+                                        <th data-field="HAM_SERINO" data-halign="center" data-align="center" data-sortable="true">HAM SERINO</th>
+<th data-field="HAM_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">HAM STOK KODU</th>
+<th data-field="HAM_ADI" data-halign="center" data-align="center" data-sortable="true">HAM ADI</th>
+<th data-field="HAM_DETAY" data-width="150" data-halign="center" data-align="center" data-sortable="true">HAM DETAY</th>
+<th data-field="HAM_GENISLIK" data-halign="center" data-align="center" data-sortable="true">HAM GENISLIK</th>
+<th data-field="HAM_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KALINLIK</th>
+<th data-field="HAM_FIRMA_SERI" data-halign="center" data-align="center" data-sortable="true">HAM FIRMA SERI</th>
+<th data-field="ACIKLAMA_4" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 4</th>
+<th data-field="ACIKLAMA_5" data-halign="center" data-align="center" data-sortable="true">ACIKLAMA 5</th>
+<th data-field="HAM_KALITE" data-halign="center" data-align="center" data-sortable="true">HAM KALITE</th>
+<th data-field="HAM_KAP_KALINLIK" data-halign="center" data-align="center" data-sortable="true">HAM KAP KALINLIK</th>
+<th data-field="HAM_MIKTAR" data-halign="center" data-align="center" data-sortable="true">HAM MIKTAR</th>
+<th data-field="SIRA" data-halign="center" data-align="center" data-sortable="true">SIRA</th>
+<th data-field="USTISEMRI" data-halign="center" data-align="center" data-sortable="true">USTISEMRI</th>
+<th data-field="ALT_ISEMRI" data-halign="center" data-align="center" data-sortable="true">ALT ISEMRI</th>
+<th data-field="URT_SERINO" data-halign="center" data-align="center" data-sortable="true">URT SERINO</th>
+<th data-field="URT_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">URT STOK KODU</th>
+<th data-field="URT_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">URT STOK_ADI</th>
+<th data-field="URT_GENISLIK" data-halign="center" data-align="center" data-sortable="true">URT GENISLIK</th>
+<th data-field="IE_MIKTAR2" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR2</th>
+<th data-field="IE_MIKTAR" data-halign="center" data-align="center" data-sortable="true" data-formatter="MiktarFormatter">IE MIKTAR</th>
+<th data-field="REFISEMRINO" data-halign="center" data-align="center" data-sortable="true">REFISEMRINO</th>
+<th data-field="REF_STOK_KODU" data-halign="center" data-align="center" data-sortable="true">REF STOK KODU</th>
+<th data-field="REF_STOK_ADI" data-halign="center" data-align="center" data-sortable="true">REF STOK ADI</th>
                                     <th data-formatter="IsEmriDetayIslemFormatter" data-halign="center" data-align="center" data-sortable="true">İŞLEM</th>
                                         </tr></thead></table></div></div>`);
 
@@ -709,9 +709,9 @@
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'HAM_SERINO');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_STOK_KODU');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_ADI');
-                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_DETAY');
+                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'HAM_DETAY');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_GENISLIK');
-                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'HAM_KALINLIK');
+                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_KALINLIK');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_FIRMA_SERI');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'ACIKLAMA_4');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'ACIKLAMA_5');
@@ -719,7 +719,7 @@
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_KAP_KALINLIK');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'HAM_MIKTAR');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'USTISEMRI');
-                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'ALT_ISEMRI');
+                    $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'ALT_ISEMRI');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'SIRA');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('hideColumn', 'URT_SERINO');
                     $(`#BekleyenIsEmirleri${DetailTableId}DetailTable`).bootstrapTable('showColumn', 'URT_STOK_KODU');
@@ -2097,6 +2097,9 @@
 
 
 
+        }
+        function MiktarFormatter(value, index, row) {
+            return value.toLocaleString();
         }
         function eksikChange(e) {
             $("#guncelleButton").attr("data-eksik", e.value);
