--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -23,6 +23,9 @@
     <link rel="stylesheet" type="text/css" href="\assets\vendor\css\theme-default.css" class="template-customizer-theme-css" />
     <link rel="stylesheet" type="text/css" href="\assets\css\demo.css" />
 
+    <link href="~/assets/css/printjs.min.css" rel="stylesheet" />
+    <script src="~/assets/js/printjs.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs\perfect-scrollbar\perfect-scrollbar.css" />
 
     <link rel="stylesheet" type="text/css" href="\assets\vendor\libs/apex-charts/apex-charts.css" />
