--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1332,7 +1332,7 @@
                         var hat = value.dataset.hat;
                         var genislik = value.dataset.genislik;
                         $.ajax({
-                            url: '@Url.Action("UretimSonuKaydı", "IsEmri")',
+                            url: '@Url.Action("UretimSonuKaydı", "Uretim")',
                             type: 'POST',
                             data: { "hatkodu": hat, "stokkodu": stokkodu, "genislik": (genislik == "null" ? null : genislik.toString().trim()), "mik1": m1.toString().trim(), "mik2": m2.toString().trim() },
                             error: function (data) {
@@ -1753,7 +1753,7 @@
                 var kontrol = $("#kontrol").is(':checked');
                 if (hat.substring(0, 2) != "TP" && hat.substring(0, 2) != "BK") {
                     $.ajax({
-                        url: '@Url.Action("UretimSonuKaydı", "IsEmri")',
+                        url: '@Url.Action("UretimSonuKaydı", "Uretim")',
                         type: 'POST',
                         data: { "hatkodu": hat, "stokkodu": stok, "genislik": (genislik == "null" ? null : genislik.toString().trim()), "mik1": m1.toString().trim(), "mik2": m2.toString().trim(),"kontrol":kontrol },
                         error: function (data) {
