Üretim Kaydı - Miktar girişi sonrası kaydet butonu aktifliği düzeltildi.

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1283,8 +1283,7 @@
             if (m2 > max2) {
                 $("#miktar22").val(max2)
             }
-            if (m2.length > 0) {
-                if (m1.length > 0) {
+            if (m2.length > 0 && m1.length > 0) {
                     if (m1 % m2 != 0) {
                         if (hat == "DL01") {
                             if (parseInt(m1) + (m2 - (m1 % m2)) > max) {
@@ -1298,14 +1297,12 @@
                         if (m2 == 0) {
                             $("#miktar22").val(null)
                             $("#ModalSaveButton").prop("disabled", true)
+                        } else {
+                            $("#ModalSaveButton").prop("disabled", false);
                         }
                     } else {
                         $("#ModalSaveButton").prop("disabled", false);
                     }
-
-                } else {
-                    $("#ModalSaveButton").prop("disabled", true)
-                }
             } else {
                 $("#ModalSaveButton").prop("disabled", true)
             }
@@ -1479,6 +1476,7 @@
             if (hat == 'DL01') {
                 $("#kontrolcol").show();
             } else {
+                $("#kontrol").prop('checked', false);
                 $("#kontrolcol").hide();
             }
             $("#SiparisModalLabel").html(value.innerHTML.split("<br>")[0]);
