birleştirme için commit yapıldı

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1480,6 +1480,7 @@
                 $("#kontrolcol").show();
             } else {
                 $("#kontrolcol").hide();
+                $("#kontrol").prop('checked', false);
             }
             $("#SiparisModalLabel").html(value.innerHTML.split("<br>")[0]);
             $("#SiparisModalLabel2").html(value.innerHTML.split("<br>")[1].split("<p")[0]);
