--- a/NOVA/Views/IsEmri/Test.cshtml
+++ b/NOVA/Views/IsEmri/Test.cshtml
@@ -912,7 +912,7 @@
             lis = newsp;
             alert(JSON.stringify(lis))
             $.ajax({
-                url: '@Url.Action("PostTRPZ","IsEmri")',
+                url: '@Url.Action("PostTRPZ","Uretim")',
                 type: 'POST',
                 data: { isemri: lis}
             }).success(function () {
