--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1734,11 +1734,11 @@
                             }
                         })
         }
-        function load(url){
+        function load(url) {
              $.getJSON(url,function(data){
                         var d=data;
                          $.ajax({
-                        url: '@Url.Action("TrpzUretim", "IsEmri")',
+                        url: '@Url.Action("TrpzUretim", "Uretim")',
                      type: 'POST',
                      data: { "stokkodu": stok, "ISEMRINO": d[0].ISEMRINO, "SERI_NO": d[0].SERI_NO, "KULL_MIKTAR": d[0].KULL_MIKTAR, "mik2":  d[0].KULL_MIKTAR2 },
                         error: function (data) {
@@ -1810,10 +1810,13 @@
                         }
                     })
                 } else {
+                    $.getJSON("http://192.168.2.13:83/api/ie/all/" + hat + "/" + stok + "/0/H", function (data) {
+                        var isemri = data[0].ISEMRINO;
+                        var url = "//192.168.2.13:83/api/ie/USK/" + hat + "/" + stok + "/" + isemri + "/" + m1.toString().trim() + "/" + m2.toString().trim() + "/0";
 
-                    var url = "//192.168.2.13:83/api/ie/USK/" + hat + "/" + stok + "/" + isemri + "/" + m1.toString().trim() + "/" + m2.toString().trim()+"/0";
-
-                    load(url);
+                        load(url);
+                    })
+                    
                 }
             } else {
                 Swal.fire(
