İş Emri sayfası oluşturuldu.DL Kısmı düzenlendi.

--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -427,6 +427,7 @@
                                 <div class="nav__dropdown-content">
 
                                     <a href="@Url.Action("Index", "IsEmri")" id="isemri1" style="cursor: pointer; display: @ViewBag.DisplayIsEmriKayit" class="nav__dropdown-item">• İş Emri Giriş</a>
+                                    <a href="@Url.Action("IsEmri", "IsEmri")" id="isemri2" style="cursor: pointer; display: @ViewBag.DisplayIsEmriKayit" class="nav__dropdown-item">• İş Emri</a>
                                     <a href="@Url.Action("Index", "Uretim")" id="anlikuretim1" style="cursor:pointer;display:  @ViewBag.DisplayAnlikUretim" class="nav__dropdown-item">• Üretim Kayıtları</a>
                                 </div>
                             </div>
