--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -114,6 +114,11 @@
                         <div data-i18n="Without menu">İş Emri Giriş</div>
                     </a>
                 </li>
+                <li class="menu-item" id="isemri2" style="display: @ViewBag.DisplayIsEmriKayit">
+                    <a href="@Url.Action("IsEmri", "IsEmri")" class="menu-link">
+                        <div data-i18n="Without menu">İş Emri</div>
+                    </a>
+                </li>
                 <li class="menu-item" id="anlikuretim" style="display: @ViewBag.DisplayAnlikUretim">
                     <a href="@Url.Action("Index", "Uretim")" class="menu-link">
                         <div data-i18n="Without menu">Üretim Kayıtları</div>
