--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -1235,7 +1235,7 @@
         }
     }
     function netsisaktar() {
-            $("#progress").show();
+        $("#content").show();
 document.body.style.cursor = 'wait';
         var lis = [];
 alert(takiplist)
@@ -1248,7 +1248,7 @@ $.ajax({
     data: { isemri: lis },
     success: function () {
 
-        $("#progress").hide();
+        $("#content").hide();
         /*mail();*/
         const Toast = Swal.mixin({
             toast: true,
@@ -1271,6 +1271,7 @@ $.ajax({
     },
     error: function () {
         document.body.style.cursor = 'default';
+        $("#content").hide();
         const Toast = Swal.mixin({
             toast: true,
             position: 'top-end',
@@ -1289,8 +1290,10 @@ $.ajax({
         });
     }
 }).done(function () {
+    $("#content").hide();
     sil()
     document.body.style.cursor = 'default';
+
 
 })
     }
