--- a/NOVA/Views/IsEmri/Is.cshtml
+++ b/NOVA/Views/IsEmri/Is.cshtml
@@ -3632,7 +3632,9 @@ var tpl = $.pivotUtilities.aggregatorTemplates;
                     sum = sum + parseInt(rr[i].getElementsByTagName("th")[rr[i].getElementsByTagName("th").length - 2].innerHTML);
                     sum2 = sum2 + parseInt(rr[i].getElementsByTagName("th")[rr[i].getElementsByTagName("th").length - 1].innerHTML);
                 }
-                
+                document.getElementById("fireagirligi1").value = sum;
+
+                document.getElementById("fireyuzde1").value = parseFloat(sum / sum2 * 100).toFixed(2) + " %";
 
             });
     }
